# user-notify-reborn

./: Cargo.toml  README.md
examples/: Info.plist  action.rs  basic.rs  build_and_sign.sh  long_text.rs  non_main_thread.rs  permission_request.rs  windows_com_test.rs
src/: error.rs  lib.rs  notify.rs  os_impl.rs  prelude.rs
src/os_impl/: linux.rs
src/os_impl/macos/: builder.rs  delegate.rs  mod.rs
src/os_impl/windows/: builder.rs  mod.rs
tests/: integration_tests.rs
