[package]
name = "user-notify-reborn"
description = "Send notifications to the system notification center, works on Windows and macOS"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "signal",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
] }
trace = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[target."cfg(windows)".dependencies]
base64 = "0.22"
quick-xml = "0.38"
serde = "1"
serde_json = "1"
windows = { version = "0.61", features = [
    "ApplicationModel",
    "Foundation_Collections",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
] }
windows-collections = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSBundle",
    "NSDictionary",
    "NSError",
    "NSSet",
    "NSString",
    "NSURL",
] }
objc2-user-notifications = "0.3"
send_wrapper = "0.6"

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4.4"
anyhow = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "long_text"
path = "examples/long_text.rs"

[[example]]
name = "permission_request"
path = "examples/permission_request.rs"

[[example]]
name = "non_main_thread"
path = "examples/non_main_thread.rs"

[[example]]
name = "action"
path = "examples/action.rs"

[[example]]
name = "windows_com_test"
path = "examples/windows_com_test.rs"
